<resources>
    <string name="app_name">Arlington Rent a Car</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_testactivity">testactivity</string>
    <string name="renter_screen">Renter Home Screen</string>
    <string name="admin_screen">Admin Home Screen</string>
    <string name="manager_screen">Manager Home Screen</string>
    <string name="logout">Logout</string>
    <string name="start_date_text">Start Date</string>
    <string name="start_time_text">Start Time</string>
    <string name="end_date_text">End Date</string>
    <string name="end_time_text">End Time</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="carname">Car Name</string>
    <string name="carcapacity">Car Capacity</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="numberofriders">Number Of Riders</string>
    <string name="gps">GPS</string>
    <string name="onstar">OnStar</string>
    <string name="siriusxm">SiriusXM</string>
    <string name="totalprice">Total Price</string>
    <string name="arlingtonautoclubmember">Arlington Auto Club Member</string>
    <string name="register_activity_name">Register User</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="firstName_label">First Name:</string>
    <string name="lastName_label">Last Name:</string>
    <string name="uta_id_label">UTA ID:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="street_address_label">Street Address:</string>
    <string name="city_label">City:</string>
    <string name="state_label">State:</string>
    <string name="zip_code_label">Zip:</string>
    <string name="role_label">Role:</string>
    <string name="aaa_member_label">Arlington Auto Club Member:</string>
    <string name="btnRegister">Register</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="uta_id_hint">uta id</string>
    <string name="email_hint">email</string>
    <string name="phone_hint">phone</string>
    <string name="street_add_hint">street address</string>
    <string name="city_hint">city</string>
    <string name="zip_hint">zip code</string>
    <string name="tBtnRenterViewProfile">View Profile</string>
    <string name="tBtnRenterViewReservations">View Reservations</string>
    <string name="tBtnRenterRequestCar">Request Car</string>
    <string name="tBtnRenterLogout">Logout</string>
    <string name="rcStartDateLabel">Start Date</string>
    <string name="rcStartTimeLabel">Start Time</string>
    <string name="rcEndDateLabel">End Date</string>
    <string name="rcEndTimeLabel">End Time</string>
    <string name="rcNumOfRiders">Number of Riders</string>
    <string name="requestCarBtnName">Request Car</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="numOfRidersHint">1</string>
    <string name="rcStartDatePicker">requestCarStartDatePicker</string>
    <string name="rcEndDatePicker">requestCarEndDatePicker</string>
    <string name="requestCarActivityLabel">Request Car</string>
    <string name="renterHomeScreenActivityLabel">Renter Home Screen</string>
    <string name="registerActivityLabel">Register User</string>
    <string name="viewRequestedCarActivityLabel">Request Car Summary</string>
    <string name="car_number_label">Car Number:</string>
    <string name="car_number">1</string>
    <string name="car_name_label">Car Name:</string>
    <string name="car_name">Smart</string>
    <string name="car_capacity_label">Car Capacity:</string>
    <string name="car_capacity">1</string>
    <string name="start_date_label">Start Date Time:</string>
    <string name="start_date">10/22/2020</string>
    <string name="start_time_label">Start Time:</string>
    <string name="start_time">8:00 AM</string>
    <string name="end_date_label">End Date Time:</string>
    <string name="end_date">10/25/2020</string>
    <string name="end_time_label">End Time:</string>
    <string name="end_time">5:00 PM</string>
    <string name="number_of_riders_label">Number of Riders:</string>
    <string name="num_of_riders">1</string>
    <string name="total_price_label">Total Price:</string>
    <string name="total_price">$138.56</string>
    <string name="arlington_auto_club_member_label">Arlington Auto Club Member:</string>
    <string name="aaa_mem_stat_value">Yes</string>
    <string name="btn_request_car_text">Request Car</string>
    <string name="gpsSwitchText">GPS</string>
    <string name="sirisuxmSwitchText">SiriusXM</string>
    <string name="onstarSwitchText">OnStar</string>
    <string name="renter_user_greeting">Good Morning, John Doe</string>
    <string name="menu_logout_title">Logout</string>
    <string name="sessions_preference_file_key">com.example.arlingtonrentacar.sessions</string>
    <string name="session_loggedin_username">loggedin_username</string>
    <string name="session_loggedin_user_role">loggedin_user_role</string>
    <string name="session_req_car_form_data_numOfRiders">formDataNumOfRiders</string>
    <string name="session_req_car_form_date_startDateTime">formDataStartDateTime</string>
    <string name="session_req_car_form_data_endDateTime">formDataEndDateTime</string>
    <string name="RequestedCarDetailsActivityLabel">Request Car Item Details</string>
    <string name="parcel_selected_requested_car_summary_item">selectedRequestCarSummaryItem</string>
    <string name="title_activity_manager_search_car_screen">ManagerSearchCarScreen</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="renterViewReservationsDP">renterViewReservationStartDatePicker</string>
    <string name="tvStartTimeRenterViewReservations">Start Time</string>
    <string name="renter_view_my_reservations">Reservations</string>
    <string name="sessionStartDateTimeViewReservationFormData">startDateTimeViewReservationsFormData</string>
    <string name="parcel_selected_reservation_summary_item">selectedReservationSummaryItem</string>
    <string name="rd_reservation_id">Reservation ID:</string>
    <string name="rd_arlington_auto_club_member">Arlington Auto Club Member:</string>
    <string name="rd_car_number">Car Number:</string>
    <string name="rd_car_name">Car Name:</string>
    <string name="rd_car_capacity">Car Capacity:</string>
    <string name="rd_number_of_riders">Number of Riders:</string>
    <string name="rd_gps">GPS</string>
    <string name="rd_siriusxm">SiriusXM</string>
    <string name="rd_onstar">OnStar</string>
    <string name="rd_end_time">End Time:</string>
    <string name="rd_cancel_reservation_btn_label">Cancel Reservation</string>
    <string name="rd_update_reservation_btn_label">Update Reservation</string>
    <string name="rvp_username_label">Username:</string>
    <string name="label_rvp_password">Password:</string>
    <string name="label_rvp_last_name">Last Name:</string>
    <string name="label_rvp_first_name">First Name:</string>
    <string name="label_rvp_uta_id">UTA ID:</string>
    <string name="label_rvp_role">Role:</string>
    <string name="label_rvp_phone">Phone:</string>
    <string name="label_rvp_email">Email:</string>
    <string name="label_rvp_street_address">Street Address:</string>
    <string name="label_rvp_city">City:</string>
    <string name="label_rvp_state">State</string>
    <string name="label_rvp_zip">Zip:</string>
    <string name="label_rvp_arlington_auto_club_member">Arlington Auto Club Member:</string>
    <string name="label_rvp_user_status">User Status:</string>
    <string name="label_btn_update_profile">Update Profile</string>
    <string name="session_reservation_details_start_date_yyyy_mm_dd">reservationDetailsStartDateYYYYMMDD</string>
    <string name="session_reservation_details_end_date_yyyy_mm_dd">reservationDetailsEndDateYYYYMMDD</string>
    <string-array name="states">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="roles">
        <item>Renter</item>
        <item>Manager</item>
        <item>Admin</item>
    </string-array>
    <string-array name="aaa_status">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="weekday_hours">
        <item>08:00 AM</item>
        <item>08:30 AM</item>
        <item>09:00 AM</item>
        <item>09:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>01:00 PM</item>
        <item>01:30 PM</item>
        <item>02:00 PM</item>
        <item>02:30 PM</item>
        <item>03:00 PM</item>
        <item>03:30 PM</item>
        <item>04:00 PM</item>
        <item>04:30 PM</item>
        <item>05:00 PM</item>
        <item>05:30 PM</item>
        <item>06:00 PM</item>
        <item>06:30 PM</item>
        <item>07:00 PM</item>
        <item>07:30 PM</item>
        <item>08:00 PM</item>
    </string-array>
    <string-array name="saturday_hours">
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>
        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
    </string-array>
</resources>